mettre les aria-label et les listes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
     <header>
         <nav>
-            <section>
-                <h3> <a href=""> PORTFOLIO </a> </h3>
-            </section>
-            <section>
-                <a href=""> PROFIL </a>
-                <a href=""> COMPÉTENCES </a>
-                <a href=""> PROJETS </a>
-                <a href=""> CONTACT </a>
+            <ul>
+                <li> <a href="" aria-label="lien vers à propos"> À propos </a> </li>
+                <li> <a href="" aria-label="lien vers les compétences"> Compétences </a> </li>
+                <li>  <a href="" aria-label="lien vers les projets"> Projets </a> </li>
+                <li> <a href="" aria-label="lien vers le contact"> Contact </a> </li>
+            </ul>
         </nav>
     </header>
 
@@ -41,6 +39,12 @@
         
         <section class="competence">
             <h3> Mes Compétences </h3>
+            <section class="competence_front-end">
+                <h4> Front-end </h4>
+                <section>
+                    <img src="images/html-logo.png" alt="logo html">
+                </section>
+            </section>
 
         </section>
 
