--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <section class="a_propos">
-            <h3> À Propos </h3>
+            <h2> À Propos </h2>
         <p>
             Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle Leonce MOUSSONGUI j'ai 17 ans et je suis originaire du Cameroun.
             Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
@@ -38,14 +38,22 @@
         </section>
         
         <section class="competence">
-            <h3> Mes Compétences </h3>
+            <h2> Mes Compétences </h2>
             <section class="competence_front-end">
-                <h4> Front-end </h4>
-                <section>
-                    <img src="images/html-logo.png" alt="logo html">
+                <h3> Front-end </h3>
+                <section class="logo_front">
+                    <img src="images/html-logo.png" alt=" logo html ">
+                    <img src="images/css_logo.png" alt=" logo css ">
                 </section>
             </section>
+            <section class="competence_back-end">
+                <h3> Back-end </h3>
+                <section class="logo_back">
+                    <img src="images/python_logo.png" alt=" logo de python ">
+                    <img src="images/git_logo.png" alt=" logo de git ">
+                </section>
 
+            </section>
         </section>
 
         <section class="projet">
