ajout photo projets

--- a/index.html
+++ b/index.html
@@ -58,7 +58,14 @@
 
         <section class="projet">
             <h3> Mes Projets </h3>
-
+            <section class="projet_fansite">
+                <img src="images/fansite_capture.png" alt=" photo du fansite ">
+            </section>
+            <section class="description_fansite">
+                <p>
+                    
+                </p>
+            </section>
         </section>
         <section class="experience">
             <h3> Mes Expériences </h3>
