desription du projet

--- a/index.html
+++ b/index.html
@@ -59,16 +59,27 @@
         <section class="projet">
             <h3> Mes Projets </h3>
             <section class="projet_fansite">
-                <img src="images/fansite_capture.png" alt=" photo du fansite ">
+                <img src="images/projet fansite.png" alt=" photo du fansite ">
             </section>
             <section class="description_fansite">
                 <p>
-                    
+                    Dans le cadre de ce projet de groupe, nous avons développé un fansite en utilisant HTML et CSS. 
+                    L'objectif principal était de créer un site web simple, mais visuellement attractif, qui reflétait l'univers du thème choisi et le notre se portait sur le monde de la musique. 
+                    Le projet a impliqué une collaboration étroite entre les membres du groupe, chacun étant responsable d'une partie spécifique 
+                    du site, que ce soit la structure des pages, la mise en page ou la création des éléments graphiques. Nous avons utilisé HTML 
+                    pour organiser le contenu et structurer les différentes sections du site, tout en appliquant des styles personnalisés avec CSS 
+                    pour assurer une expérience utilisateur agréable. Nous avons mis l'accent sur la responsivité, en veillant à ce que le site soit 
+                    accessible sur différents appareils, et sur une navigation fluide et intuitive. Ce projet m'a permis de renforcer mes compétences 
+                    techniques en développement web tout en travaillant en équipe, en respectant les délais et en trouvant des solutions créatives aux défis rencontrés.
                 </p>
             </section>
         </section>
         <section class="experience">
             <h3> Mes Expériences </h3>
+            <section>
+                <h4> La Plateforme - Cyberpark </h4>
+                <h5> 14/10/2024 au 25/10/2024 - Animatrice de programme extra-scolaire </h5>
+            </section>
         </section>
         <section class="contact">
             <h3> Contact </h3>
