message sur mon stage

--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
             <section>
                 <h4> La Plateforme - Cyberpark </h4>
                 <h5> 14/10/2024 au 25/10/2024 - Animatrice de programme extra-scolaire </h5>
+                <p>
+                    Lors de mon stage de 2 semaines chez Cyberpark, à la plateforme Marseille, j'ai eu l'opportunité de travailler en tant 
+                    qu'animateur de programme extra-scolaire pour un public jeune, dans le cadre d'une initiation à la cybersécurité. 
+                    Cette expérience m'a permis d'approfondir mes compétences en animation et en gestion d'activités éducatives, tout en découvrant 
+                    l'importance de sensibiliser les jeunes aux enjeux numériques. Mes missions principales étaient les suivantes : <br>
+                     - Accueil du public et relations avec les familles : J'ai pris en charge l'accueil des enfants, 
+                     en assurant un suivi personnalisé et en répondant à leurs questions concernant le programme. <br>
+                    - Coordination logistique : J'ai participé à la mise en place et à l'organisation des sessions de formation, 
+                    en veillant à ce que le matériel nécessaire soit disponible et en assurant le bon déroulement des activités. <br>
+                    - Animation des modules pédagogiques : J'ai animé des ateliers visant à enseigner les bases de la cybersécurité, en 
+                    rendant les concepts accessibles et intéressants pour les jeunes, à travers des exemples pratiques et des exercices interactifs. <br>
+                    - Suivi et évaluation : J'ai également été impliqué dans l'évaluation des progrès des participants, en recueillant leurs 
+                    retours et en ajustant les activités en fonction de leurs besoins.<br> Cette expérience m'a permis de développer des compétences en pédagogie et en gestion de groupe, tout en renforçant ma capacité à adapter mon discours et mes méthodes à un jeune public. Mon tuteur a particulièrement apprécié ma capacité à créer un environnement d'apprentissage stimulant et à gérer les activités de manière fluide. Grâce à ce stage, j'ai acquis une meilleure compréhension des enjeux de la cybersécurité tout en consolidant mes compétences en animation et en communication.
+                </p>
             </section>
         </section>
         <section class="contact">
