section contact avec liens

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="competence_front-end">
                 <h3> Front-end </h3>
                 <section class="logo_front">
-                    <img src="images/html-logo.png" alt=" logo html ">
+                    <img src="images/logol_html.png" alt=" logo html ">
                     <img src="images/css_logo.png" alt=" logo css ">
                 </section>
             </section>
@@ -77,26 +77,48 @@
         <section class="experience">
             <h3> Mes Expériences </h3>
             <section>
-                <h4> La Plateforme - Cyberpark </h4>
-                <h5> 14/10/2024 au 25/10/2024 - Animatrice de programme extra-scolaire </h5>
-                <p>
-                    Lors de mon stage de 2 semaines chez Cyberpark, à la plateforme Marseille, j'ai eu l'opportunité de travailler en tant 
-                    qu'animateur de programme extra-scolaire pour un public jeune, dans le cadre d'une initiation à la cybersécurité. 
-                    Cette expérience m'a permis d'approfondir mes compétences en animation et en gestion d'activités éducatives, tout en découvrant 
-                    l'importance de sensibiliser les jeunes aux enjeux numériques. Mes missions principales étaient les suivantes : <br>
-                     - Accueil du public et relations avec les familles : J'ai pris en charge l'accueil des enfants, 
-                     en assurant un suivi personnalisé et en répondant à leurs questions concernant le programme. <br>
-                    - Coordination logistique : J'ai participé à la mise en place et à l'organisation des sessions de formation, 
-                    en veillant à ce que le matériel nécessaire soit disponible et en assurant le bon déroulement des activités. <br>
-                    - Animation des modules pédagogiques : J'ai animé des ateliers visant à enseigner les bases de la cybersécurité, en 
-                    rendant les concepts accessibles et intéressants pour les jeunes, à travers des exemples pratiques et des exercices interactifs. <br>
-                    - Suivi et évaluation : J'ai également été impliqué dans l'évaluation des progrès des participants, en recueillant leurs 
-                    retours et en ajustant les activités en fonction de leurs besoins.<br> Cette expérience m'a permis de développer des compétences en pédagogie et en gestion de groupe, tout en renforçant ma capacité à adapter mon discours et mes méthodes à un jeune public. Mon tuteur a particulièrement apprécié ma capacité à créer un environnement d'apprentissage stimulant et à gérer les activités de manière fluide. Grâce à ce stage, j'ai acquis une meilleure compréhension des enjeux de la cybersécurité tout en consolidant mes compétences en animation et en communication.
-                </p>
-            </section>
+                <section class="stage_cyberpark">
+                    <h4> La Plateforme - Cyberpark </h4>
+                    <h5> 14/10/2024 au 25/10/2024 - Animatrice de programme extra-scolaire </h5>
+                    <p>
+                        Lors de mon stage de 2 semaines chez Cyberpark, à la plateforme Marseille, j'ai eu l'opportunité de travailler en tant 
+                        qu'animateur de programme extra-scolaire pour un public jeune, dans le cadre d'une initiation à la cybersécurité. 
+                        Cette expérience m'a permis d'approfondir mes compétences en animation et en gestion d'activités éducatives, tout en découvrant 
+                        l'importance de sensibiliser les jeunes aux enjeux numériques. Mes missions principales étaient les suivantes : <br>
+                        - Accueil du public et relations avec les familles : J'ai pris en charge l'accueil des enfants, 
+                        en assurant un suivi personnalisé et en répondant à leurs questions concernant le programme. <br>
+                        - Coordination logistique : J'ai participé à la mise en place et à l'organisation des sessions de formation, 
+                        en veillant à ce que le matériel nécessaire soit disponible et en assurant le bon déroulement des activités. <br>
+                        - Animation des modules pédagogiques : J'ai animé des ateliers visant à enseigner les bases de la cybersécurité, en 
+                        rendant les concepts accessibles et intéressants pour les jeunes, à travers des exemples pratiques et des exercices interactifs. <br>
+                        - Suivi et évaluation : J'ai également été impliqué dans l'évaluation des progrès des participants, en recueillant leurs 
+                        retours et en ajustant les activités en fonction de leurs besoins.<br> Cette expérience m'a permis de développer des compétences en pédagogie et en gestion de groupe, tout en renforçant ma capacité à adapter mon discours et mes méthodes à un jeune public. Mon tuteur a particulièrement apprécié ma capacité à créer un environnement d'apprentissage stimulant et à gérer les activités de manière fluide. Grâce à ce stage, j'ai acquis une meilleure compréhension des enjeux de la cybersécurité tout en consolidant mes compétences en animation et en communication.
+                    </p>
+                </section>
+            </section>       
         </section>
         <section class="contact">
-            <h3> Contact </h3>
+            <h3> Me Contacter </h3>
+            <section class="lien_contact">
+                <a href="mailto:leonce-vicente.moussongui@laplateforme.io" aria-label=" lien vers la boite mail avec l'adresse " target="_blank">
+                    <figure>
+                        <img src="images/logo_mail.png" alt=" logo du mail ">
+                    </figure>
+                </a>
+                <a href="https://github.com/leonce-moussongui" aria-label=" lien vers mon github " target="_blank">
+                    <figure>
+                        <img src="images/logo_github.png" alt=" logo de github ">
+                        <figcaption> Github </figcaption>
+                    </figure>
+                </a>
+                <a href="https://www.linkedin.com/in/leonce-moussongui-2586a0330/" aria-label=" lien vers le compte LinkedIn " target="_blank">
+                    <figure>
+                        <img src="images/logo_linkedin.png" alt=" logo de Linkedin ">
+                        <figcaption> LinkedIn</figcaption>
+                    </figure>
+                </a>
+            </section>
+
         </section>
         
     </main>
