--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
         <p>
             Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle Leonce MOUSSONGUI j'ai 17 ans et je suis originaire du Cameroun.
             Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
-
             Je suis en pré, j'ai pu approfondir mes connaissances en développement et découvrir de nouvelles technologies. 
             J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
             Plus tard, j'envisage de me spécialiser en développement notamment grâce à la certification CDA que je suis actuellement en train de suivre.
             Après ces trois années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance.
-
-        Je serai très heureux de pouvoir vous aider dans vos futurs projets.
-        Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. Vous pouvez consulter mon CV en cliquant sur le lien suivant Accéder au CV.
-
-        Bonne lecture et à bientôt.
+            Je serai très heureux de pouvoir vous aider dans vos futurs projets.
+            Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me contacter, 
+            n'hésitez pas à explorer ce site et à me faire des retours. Vous pouvez consulter mon CV en cliquant sur le lien suivant Accéder au CV. <br>
+            Bonne lecture et à bientôt.
         </p>
         </section>
         
@@ -42,15 +40,15 @@
             <section class="competence_front-end">
                 <h3> Front-end </h3>
                 <section class="logo_front">
-                    <img src="images/logol_html.png" alt=" logo html ">
-                    <img src="images/css_logo.png" alt=" logo css ">
+                    <img src="images/logol_html-removebg-preview.png" alt=" logo html ">
+                    <img src="images/css_logo-removebg-preview.png" alt=" logo css ">
                 </section>
             </section>
             <section class="competence_back-end">
                 <h3> Back-end </h3>
                 <section class="logo_back">
-                    <img src="images/python_logo.png" alt=" logo de python ">
-                    <img src="images/git_logo.png" alt=" logo de git ">
+                    <img src="images/python_logo-removebg-preview.png" alt=" logo de python ">
+                    <img src="images/git_logo-removebg-preview (1).png" alt=" logo de git ">
                 </section>
 
             </section>
@@ -102,25 +100,23 @@
             <section class="lien_contact">
                 <a href="mailto:leonce-vicente.moussongui@laplateforme.io" aria-label=" lien vers la boite mail avec l'adresse " target="_blank">
                     <figure>
-                        <img src="images/logo_mail.png" alt=" logo du mail ">
+                        <img src="images/logo_mail-removebg-preview.png" alt=" logo du mail ">
                     </figure>
                 </a>
                 <a href="https://github.com/leonce-moussongui" aria-label=" lien vers mon github " target="_blank">
                     <figure>
-                        <img src="images/logo_github.png" alt=" logo de github ">
+                        <img src="images/logo_github-removebg-preview.png" alt=" logo de github ">
                         <figcaption> Github </figcaption>
                     </figure>
                 </a>
                 <a href="https://www.linkedin.com/in/leonce-moussongui-2586a0330/" aria-label=" lien vers le compte LinkedIn " target="_blank">
                     <figure>
-                        <img src="images/logo_linkedin.png" alt=" logo de Linkedin ">
+                        <img src="images/logo_linkedin-removebg-preview.png" alt=" logo de Linkedin ">
                         <figcaption> LinkedIn</figcaption>
                     </figure>
                 </a>
             </section>
-
         </section>
-        
     </main>
 
     <footer>
