ajout de la bonne image

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </header>
 
     <main>
+        <section class="nom_photo_du_domaine">
+            <img src="images/Leonce MOUSSONGUI.png" alt="">
         <section class="a_propos">
             <h2> À Propos </h2>
         <p>
@@ -40,7 +42,7 @@
             <section class="competence_front-end">
                 <h3> Front-end </h3>
                 <section class="logo_front">
-                    <img src="images/logol_html-removebg-preview.png" alt=" logo html ">
+                    <img src="images/logo_html-removebg-preview.png" alt=" logo html ">
                     <img src="images/css_logo-removebg-preview.png" alt=" logo css ">
                 </section>
             </section>
@@ -57,7 +59,7 @@
         <section class="projet">
             <h3> Mes Projets </h3>
             <section class="projet_fansite">
-                <img src="images/projet fansite.png" alt=" photo du fansite ">
+                <img src="images/projet fansite.png" alt=" capture d'écran du projet du fansite ">
             </section>
             <section class="description_fansite">
                 <p>
@@ -112,7 +114,7 @@
                 <a href="https://www.linkedin.com/in/leonce-moussongui-2586a0330/" aria-label=" lien vers le compte LinkedIn " target="_blank">
                     <figure>
                         <img src="images/logo_linkedin-removebg-preview.png" alt=" logo de Linkedin ">
-                        <figcaption> LinkedIn</figcaption>
+                        <figcaption> LinkedIn </figcaption>
                     </figure>
                 </a>
             </section>
@@ -120,7 +122,7 @@
     </main>
 
     <footer>
-        <span> &copy; Leonce MOUSSONGUI 2024 </span>
+        <span> &copy; Leonce MOUSSONGUI 2024. Tous droits réservés </span>
     </footer>
 </body>
 </html>
