ajout du figcaption de mail

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <a href="mailto:leonce-vicente.moussongui@laplateforme.io" aria-label=" lien vers la boite mail avec l'adresse " target="_blank">
                     <figure>
                         <img src="images/logo_mail-removebg-preview.png" alt=" logo du mail ">
+                        <figcaption> Mail </figcaption>
                     </figure>
                 </a>
                 <a href="https://github.com/leonce-moussongui" aria-label=" lien vers mon github " target="_blank">
