mise en place de l'ancrage

--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
     <header>
         <nav>
             <ul>
-                <li> <a href="" aria-label="lien vers à propos"> À propos </a> </li>
-                <li> <a href="" aria-label="lien vers les compétences"> Compétences </a> </li>
-                <li>  <a href="" aria-label="lien vers les projets"> Projets </a> </li>
-                <li> <a href="" aria-label="lien vers le contact"> Contact </a> </li>
+                <li> <a href="#a_propos" aria-label="lien vers à propos"> À propos </a> </li>
+                <li> <a href="#competence" aria-label="lien vers les compétences"> Compétences </a> </li>
+                <li> <a href="#projet" aria-label="lien vers les projets"> Projets </a> </li>
+                <li> <a href="#contact" aria-label="lien vers le contact"> Contact </a> </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="nom_photo_du_domaine">
-            <img src="images/Leonce MOUSSONGUI.png" alt="">
-        <section class="a_propos">
+        <section class="photo_domaine">
+            <img src="images/Leonce MOUSSONGUI.png" alt="imade de ma description">
+        <section id="a_propos">
             <h2> À Propos </h2>
-        <p>
-            Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle Leonce MOUSSONGUI j'ai 17 ans et je suis originaire du Cameroun.
-            Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
-            Je suis en pré, j'ai pu approfondir mes connaissances en développement et découvrir de nouvelles technologies. 
-            J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
-            Plus tard, j'envisage de me spécialiser en développement notamment grâce à la certification CDA que je suis actuellement en train de suivre.
-            Après ces trois années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance.
-            Je serai très heureux de pouvoir vous aider dans vos futurs projets.
-            Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me contacter, 
-            n'hésitez pas à explorer ce site et à me faire des retours. Vous pouvez consulter mon CV en cliquant sur le lien suivant Accéder au CV. <br>
-            Bonne lecture et à bientôt.
-        </p>
+            <p>
+                Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle Leonce MOUSSONGUI j'ai 17 ans et je suis originaire du Cameroun.
+                Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
+                Je suis en pré, j'ai pu approfondir mes connaissances en développement et découvrir de nouvelles technologies. 
+                J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
+                Plus tard, j'envisage de me spécialiser en développement notamment grâce à la certification CDA que je suis actuellement en train de suivre.
+                Après ces trois années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance.
+                Je serai très heureux de pouvoir vous aider dans vos futurs projets.
+                Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me contacter, 
+                n'hésitez pas à explorer ce site et à me faire des retours. Vous pouvez consulter mon CV en cliquant sur le lien suivant Accéder au CV. <br>
+                Bonne lecture et à bientôt.
+            </p>
         </section>
         
-        <section class="competence">
+        <section id="competence">
             <h2> Mes Compétences </h2>
             <section class="competence_front-end">
                 <h3> Front-end </h3>
@@ -46,17 +46,16 @@
                     <img src="images/css_logo-removebg-preview.png" alt=" logo css ">
                 </section>
             </section>
-            <section class="competence_back-end">
+            <section id="competence_back-end">
                 <h3> Back-end </h3>
                 <section class="logo_back">
                     <img src="images/python_logo-removebg-preview.png" alt=" logo de python ">
                     <img src="images/git_logo-removebg-preview (1).png" alt=" logo de git ">
                 </section>
-
             </section>
         </section>
 
-        <section class="projet">
+        <section id="projet">
             <h3> Mes Projets </h3>
             <section class="projet_fansite">
                 <img src="images/projet fansite.png" alt=" capture d'écran du projet du fansite ">
@@ -74,7 +73,7 @@
                 </p>
             </section>
         </section>
-        <section class="experience">
+        <section id="experience">
             <h3> Mes Expériences </h3>
             <section>
                 <section class="stage_cyberpark">
@@ -97,7 +96,7 @@
                 </section>
             </section>       
         </section>
-        <section class="contact">
+        <section id="contact">
             <h3> Me Contacter </h3>
             <section class="lien_contact">
                 <a href="mailto:leonce-vicente.moussongui@laplateforme.io" aria-label=" lien vers la boite mail avec l'adresse " target="_blank">
