--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
         <section id="a_propos">
             <h2> À Propos </h2>
             <p>
-                Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle Leonce MOUSSONGUI j'ai 17 ans et je suis originaire du Cameroun.
+                Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle <strong> Leonce MOUSSONGUI </strong> j'ai 17 ans et je suis originaire du Cameroun.
                 Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
                 Je suis en pré, j'ai pu approfondir mes connaissances en développement et découvrir de nouvelles technologies. 
                 J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
-                Plus tard, j'envisage de me spécialiser en développement notamment grâce à la certification CDA que je suis actuellement en train de suivre.
-                Après ces trois années, je souhaite préparer un diplôme d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance.
-                Je serai très heureux de pouvoir vous aider dans vos futurs projets.
-                Si vous souhaitez en savoir plus sur moi, mes compétences et mes différents projets, ou tout simplement savoir comment me contacter, 
-                n'hésitez pas à explorer ce site et à me faire des retours. Vous pouvez consulter mon CV en cliquant sur le lien suivant Accéder au CV. <br>
+                Plus tard, j'envisage de me spécialiser dans la sécurité des données et du réseau. Après ces trois années, je souhaite préparer un diplôme 
+                d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance. <br>
+                Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
+                différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
+                Vous pouvez consulter mon CV en cliquant sur le lien suivant
+                <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Telecharger mon CV"> Accédez à mon CV </a> <br> <br>
                 Bonne lecture et à bientôt.
             </p>
         </section>
