--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfoliode Leonce MOUSSONGUI, étudiante en informatique">
     <link rel="stylesheet" href="style.css">
     <title> Portfolio Leonce MOUSSONGUI </title>
 </head>
@@ -22,28 +23,29 @@
     <main>
 
         <section class="photo_domaine">
-            <img src="images/Leonce MOUSSONGUI.png" alt="imade de ma description">
-        <section id="a_propos">
-            <h2> À Propos </h2>
-            <p>
-                Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle <strong> Leonce MOUSSONGUI </strong> j'ai 17 ans et je suis originaire du Cameroun.
-                Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
-                Je suis en pré, j'ai pu approfondir mes connaissances en développement et découvrir de nouvelles technologies. 
-                J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
-                Plus tard, j'envisage de me spécialiser dans la sécurité des données et du réseau. Après ces trois années, je souhaite préparer un diplôme 
-                d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance. <br>
-                Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
-                différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
-                Vous pouvez consulter mon CV en cliquant sur le lien suivant
-                <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Telecharger mon CV"> Accédez à mon CV </a> <br> <br>
-                Bonne lecture et à bientôt.
-            </p>
+            <img src="images/Leonce MOUSSONGUI.png" alt="image de ma description">
+            <section id="a_propos">
+                <h2> À Propos </h2>
+                <p>
+                    Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle <strong> Leonce MOUSSONGUI </strong> j'ai 17 ans et je suis originaire du Cameroun.
+                    Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
+                    Je suis en première année de bachelor IT à la Plateforme Marseille, j'ai pu approfondir mes connaissances en réseau et découvrir de nouvelles technologies. 
+                    J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
+                    Plus tard, j'envisage de me spécialiser dans la sécurité des données et du réseau. Après ces trois années, je souhaite préparer un diplôme 
+                    d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance. <br>
+                    Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
+                    différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
+                    Vous pouvez consulter mon CV en cliquant sur le lien suivant
+                    <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Télécharger mon CV"> Accédez à mon CV </a> <br> <br>
+                    Bonne lecture et à bientôt.
+                </p>
+            </section>
         </section>
         
 
         <section id="competence">
             <h2> Mes Compétences </h2>
-            <section class="competence_front-end ">
+            <section class="competence_front-end">
                 <h3> Front-end </h3>
                <article class=" logo_front-end ">
                     <img src="images/logo_html-removebg-preview.png" alt=" logo html ">
@@ -68,6 +70,7 @@
             </section>
 
             <section class="description_fansite">
+                <h4> Projet Fansite : développement d'un site en HTML et CSS </h4>
                 <p>
                     Dans le cadre de ce projet de groupe, nous avons développé un fansite en utilisant HTML et CSS. 
                     L'objectif principal était de créer un site web simple, mais visuellement attractif, qui reflétait l'univers du thème choisi et le notre se portait sur le monde de la musique. 
