definition des variables

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfoliode Leonce MOUSSONGUI, étudiante en informatique">
+    <meta name="auteur" content="Leonce MOUSSONGUI">
     <link rel="stylesheet" href="style.css">
     <title> Portfolio Leonce MOUSSONGUI </title>
 </head>
@@ -24,22 +25,22 @@
 
         <section class="photo_domaine">
             <img src="images/Leonce MOUSSONGUI.png" alt="image de ma description">
-            <section id="a_propos">
-                <h2> À Propos </h2>
-                <p>
-                    Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle <strong> Leonce MOUSSONGUI </strong> j'ai 17 ans et je suis originaire du Cameroun.
-                    Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
-                    Je suis en première année de bachelor IT à la Plateforme Marseille, j'ai pu approfondir mes connaissances en réseau et découvrir de nouvelles technologies. 
-                    J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
-                    Plus tard, j'envisage de me spécialiser dans la sécurité des données et du réseau. Après ces trois années, je souhaite préparer un diplôme 
-                    d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance. <br>
-                    Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
-                    différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
-                    Vous pouvez consulter mon CV en cliquant sur le lien suivant
-                    <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Télécharger mon CV"> Accédez à mon CV </a> <br> <br>
-                    Bonne lecture et à bientôt.
-                </p>
-            </section>
+        </section>
+        <section id="a_propos">
+            <h2> À Propos </h2>
+            <p>
+                Bonjour et bienvenue sur mon portfolio. <br> Je m'appelle <strong> Leonce MOUSSONGUI </strong> j'ai 17 ans et je suis originaire du Cameroun.
+                Étant passionnée par l'informatique depuis de nombreuses années, je me suis naturellement dirigé vers un bac avec les spécialités Mathématiques-Physique-Chimie au lycée.
+                Je suis en première année de bachelor IT à la Plateforme Marseille, j'ai pu approfondir mes connaissances en réseau et découvrir de nouvelles technologies. 
+                J'ai ainsi participé à plusieurs projets d'équipe qui m'ont permis de mettre en pratique mes compétences et de les enrichir.
+                Plus tard, j'envisage de me spécialiser dans la sécurité des données et du réseau. Après ces trois années, je souhaite préparer un diplôme 
+                d'ingénieur ou équivalent, en poursuivant mes études par 2 années d'alternance. <br>
+                Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
+                différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
+                Vous pouvez consulter mon CV en cliquant sur le lien suivant
+                <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Télécharger mon CV"> Accédez à mon CV </a> <br> <br>
+                Bonne lecture et à bientôt.
+            </p>
         </section>
         
 
@@ -53,9 +54,9 @@
                 </article>
             </section>
 
-            <section id="competence_back-end ">
+            <section id="competence_back-end">
                 <h3> Back-end </h3>
-                <article class=" logo_back-end ">
+                <article class="logo_back-end">
                     <img src="images/python_logo-removebg-preview.png" alt=" logo de python ">
                     <img src="images/git_logo-removebg-preview (1).png" alt=" logo de git ">
                 </article>
