--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h5> 14/10/2024 au 25/10/2024 - Animatrice de programme extra-scolaire </h5>
                 <p>
                     Lors de mon stage de 2 semaines chez Cyberpark, à la plateforme Marseille, j'ai eu l'opportunité de travailler en tant 
-                    qu'animateur de programme extra-scolaire pour un public jeune, dans le cadre d'une initiation à la cybersécurité. 
+                    qu'animatrice de programme extra-scolaire pour un public jeune, dans le cadre d'une initiation à la cybersécurité. 
                     Cette expérience m'a permis d'approfondir mes compétences en animation et en gestion d'activités éducatives, tout en découvrant 
                     l'importance de sensibiliser les jeunes aux enjeux numériques. Mes missions principales étaient les suivantes : <br>
                     - Accueil du public et relations avec les familles : J'ai pris en charge l'accueil des enfants, 
