ajout de compétences

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Je serais très heureuse de pouvoir vous aider dans vos futurs projets. Si vous souhaitez en savoir plus sur moi, mes compétences et mes 
                 différents projets, ou tout simplement savoir comment me contacter, n'hésitez pas à explorer ce site et à me faire des retours. 
                 Vous pouvez consulter mon CV en cliquant sur le lien suivant
-                <a href="fichier/Nouveau CV.pdf" target="_blank" class="btn_cv" aria-label="Télécharger mon CV"> Accédez à mon CV </a> <br> <br>
+                <a href="fichier/CV de mars.pdf" target="_blank" class="btn_cv" aria-label="Télécharger mon CV"> Accédez à mon CV </a> <br> <br>
                 Bonne lecture et à bientôt.
             </p>
         </section>
@@ -50,7 +50,7 @@
         <section id="competence">
             <h2> Mes Compétences </h2>
             <section class="competence_front-end">
-                <h3> Front-end </h3>
+                <h3> Développement Front-end </h3>
                <article class=" logo_front-end ">
                     <img src="images/logo_html-removebg-preview.png" alt=" logo html ">
                     <img src="images/css_logo-removebg-preview.png" alt=" logo css ">
@@ -58,11 +58,21 @@
             </section>
 
             <section id="competence_back-end">
-                <h3> Back-end </h3>
+                <h3> Développement Back-end </h3>
                 <article class="logo_back-end">
                     <img src="images/python_logo-removebg-preview.png" alt=" logo de python ">
-                    <img src="images/git_logo-removebg-preview (1).png" alt=" logo de git ">
                 </article>
+            </section>
+            <section class="competence_autre">
+                <h3> Autres </h3>
+                <article class="logo_autre">
+                    <img src="images/linux.webp" alt=" logo linux ">
+                    <img src="images/git_logo-removebg-preview (1).png" alt=" logo de git ">
+                    <img src="images/VoIP.avif" alt=" logo VoIP ">
+                    <img src="images/personal-ldap.png" alt=" logo ldap ">
+                    
+                </article>
+
             </section>
         </section>
 
